err/pyvib2.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyvib2-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pyviblib'...
Listing './lib/python3.5/site-packages/pyviblib/calc'...
Listing './lib/python3.5/site-packages/pyviblib/doc'...
Listing './lib/python3.5/site-packages/pyviblib/gui'...
Compiling './lib/python3.5/site-packages/pyviblib/gui/widgets.py'...
***   File "./lib/python3.5/site-packages/pyviblib/gui/widgets.py", line 178
    exec str_to_exec
                   ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/pyviblib/gui/windows.py'...
***   File "./lib/python3.5/site-packages/pyviblib/gui/windows.py", line 6849
    except DataInconsistencyError, ex :
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyviblib/io'...
Compiling './lib/python3.5/site-packages/pyviblib/io/parsers.py'...
***   File "./lib/python3.5/site-packages/pyviblib/io/parsers.py", line 1488
    print 'Warning : using the wavelength of the incident light : %.2f' % \
                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyviblib/io/writers.py'...
***   File "./lib/python3.5/site-packages/pyviblib/io/writers.py", line 247
    print 'Warning : Raman / ROA tensors are not given => writing nulls.'
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyviblib/molecule.py'...
***   File "./lib/python3.5/site-packages/pyviblib/molecule.py", line 81
    exec 'self.__class__.%s = property(' % prop + \
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyviblib/util'...
Compiling './lib/python3.5/site-packages/pyviblib/util/misc.py'...
***   File "./lib/python3.5/site-packages/pyviblib/util/misc.py", line 281
    exec str_to_exec
                   ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/pyviblib/util/pse.py'...
***   File "./lib/python3.5/site-packages/pyviblib/util/pse.py", line 85
    exec 'self.__class__.%s = property(' % prop + \
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
